glibc (2.7-4) unstable; urgency=low

  [ Aurelien Jarno ]
  * patches/localedata/locale-de_LI.diff: fix locale.  Closes: bug#453860.
  * debian/debhelper.in/locales.NEWS: fix location of the README file.
    Closes: bug#453515.
  * debian/debhelper.in/locales.README: rename into locales.README.Debian.
  * debian/debhelper/in/locales.NEWS: fix a typo.  Closes: bug#453613.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 03 Dec 2007 15:37:36 +0100

glibc (2.7-3) unstable; urgency=low

  [ Aurelien Jarno ]
  * Remove cs_CZ-first_weekday.diff: merged upstream in a different way.
    Closes: bug#344470.
  * Remove da_DK-first_weekday.diff: likewise.
  * Remove de_DE-first_weekday.diff: likewise.
  * Remove en_GB-first_weekday.diff: likewise.
  * Remove et_EE-first_weekday.diff: likewise.
  * Remove en_US-first_weekday.diff: likewise.
  * Remove fr_FR-first_weekday.diff: likewise.
  * Remove hu_HU-first_weekday.diff: likewise.
  * Remove nb_NO-first_weekday.diff: likewise.
  * Remove nn_NO-first_weekday.diff: likewise.
  * Remove pl_PL-first_weekday.diff: likewise.
  * Remove sk_SK-first_weekday.diff: likewise.
  * amd64, i386/local-clone.diff: restore patch to fix gij running out of
    memory, as it has been lost upstream.
  * debian/sysdeps/alpha.mk: fix alphaev67_rltddir.  Closes: #452890.
  * patches/localedata/locale-de_LI.diff: new locale contributed by Giacomo
    Catenazzi.  Closes: #453041.
  * debian/debhelper.in/locales-all.postinst: honor TMPDIR.  Closes: #453326.
  * patches/any/submitted-malloc_h.diff: defines __need_ptrdiff_t,
    __need_size_t and __need_NULL in malloc.h.  Closes: #453264.
  * support user defined locales in /usr/local/share/i18n.  Closes: #453131. 

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Nov 2007 18:01:03 +0100

glibc (2.7-2) unstable; urgency=low

  [ Aurelien Jarno ]
  * sysdeps/alpha.mk: define alphaev67_MIN_KERNEL_SUPPORTED to 2.6.9.
    Closes: #452890.