@@ -6,6 +6,8 @@ glibc (2.7-4) unstable; urgency=low
     Closes: bug#453515.
   * debian/debhelper.in/locales.README: rename into locales.README.Debian.
   * debian/debhelper/in/locales.NEWS: fix a typo.  Closes: bug#453613.
+  * debian/patches/any/submitted-rfc3484-sortv4.diff: default to NOT 
+    sorting IPv4 addresses.  Closes: bug#438179.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 03 Dec 2007 15:37:36 +0100
 
